--- a/web-ui/web-v0.7.1/summary-2-tab.html
+++ b/web-ui/web-v0.7.1/summary-2-tab.html
@@ -3,287 +3,200 @@
 
 <head>
   <meta charset="utf-8" />
-  <meta http-equiv="X-UA-Compatible"
-        content="IE=edge">
-  <title>Thống kê</title>
-  <meta name="viewport"
-        content="width=device-width, initial-scale=1">
-
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <title>(Company Name)</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <!-- Bootstrap -->
-  <link rel="stylesheet"
-        href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
   <!-- <link href="https://fonts.googleapis.com/css?family=Muli" rel="stylesheet">  -->
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans"
-        rel="stylesheet">
-  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
-        rel="stylesheet">
-  <link rel="stylesheet"
-        href=".\css\style.css">
-  <link rel="stylesheet"
-        href=".\css\tab.css">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+  <link rel="stylesheet" href=".\css\style.css">
+  <link rel="stylesheet" href=".\css\tab.css">
+  <link rel="stylesheet" href="./css/sweetalert2.min.css">
 </head>
 
 
-<body>
+<body onload="getRecruitmentByCompanyIdAndPublished(4, 1, 1)">
   <div id="loader">
     <div class="spinner"></div>
   </div>
   <script>
-    $(window).ready(function () {
-      $('#loader').hide();
+    window.addEventListener('load', () => {
+      const loader = document.getElementById('loader');
+      setTimeout(() => {
+        loader.classList.add('fadeOut');
+      }, 500);
     });
   </script>
-  <!-- Header -->
 
-  <nav class="navbar navbar-expand-md navbar-dark bg-dark"
-       style="height: 45px">
-    <a class="navbar-brand"
-       href=".\index.html">
-      <img src="https://res.cloudinary.com/ctsa-capstone/image/upload/v1541237101/demo-image/logoctsa.png"
-           width="90"
-           height="30"
-           class="d-inline-block align-top"
-           alt="CTSA logo">
+  <!-- Header -->
+  <nav class="navbar navbar-expand-md navbar-dark bg-dark" style="height: 45px">
+    <a class="navbar-brand" href=".\index.html">
+      <img src="https://res.cloudinary.com/ctsa-capstone/image/upload/v1541237101/demo-image/logoctsa.png" width="90"
+        height="30" class="d-inline-block align-top" alt="CTSA logo">
     </a>
 
-    <div class="collapse navbar-collapse justify-content-center menu "
-         id="navbarSupportedContent">
-      <a class="mx-5"
-         href="#">Tuyển Dụng</a>
-      <a class="mx-5"
-         href=".\graph.html">Thống Kê</a>
-      <a class="mx-5"
-         href="#">Tuyển Dụng</a>
-      <a class="mx-5"
-         href="#">Thống Kê</a>
+    <div class="collapse navbar-collapse justify-content-center menu " id="navbarSupportedContent">
+      <a class="mx-5" href="#">Tuyển Dụng</a>
+      <a class="mx-5" href=".\graph.html">Thống Kê</a>
+      <a class="mx-5" href="#">Tuyển Dụng</a>
+      <a class="mx-5" href="#">Thống Kê</a>
 
     </div>
     <span class="fa-stack">
-      <i class="	fa fa-user-circle-o fa-stack-1x"
-         style="font-size:36px; color:white"></i>
+      <i class="	fa fa-user-circle-o fa-stack-1x" style="font-size:36px; color:white"></i>
     </span>
   </nav>
   <!-- End of Header -->
+
   <div class="container-fluid">
     <div class="row">
-      <ul class="nav col-md-12"
-          id="myTab"
-          role="tablist">
-        <li class="nav-item tab tabactive"
-            id="tabhome">
-          <a class="nav-link active"
-             id="home-tab"
-             data-toggle="tab"
-             href="#home"
-             role="tab"
-             aria-controls="home"
-             aria-selected="true">Tổng hợp</a>
+      <ul class="nav col-md-12" id="myTab" role="tablist">
+        <li class="nav-item tab tabactive col-md-4" id="tab-published">
+          <a class="nav-link active" href="#list-published">Tin đã đăng</a>
         </li>
-        <li class="nav-item tab"
-            id="tabstat">
-          <a class="nav-link"
-             id="statistic-tab"
-             data-toggle="tab"
-             href="#statistic"
-             role="tab"
-             aria-controls="profile"
-             aria-selected="false">Thống kê</a>
+        <li class="nav-item tab col-md-4" id="tab-unpublished">
+          <a class="nav-link" href="#list-unpublished">Tin chưa công bố</a>
         </li>
-
       </ul>
     </div>
     <div class="row">
-      <div id="content"
-           class="tab-content col-md-12 folder">
-        <div class="tab-pane fade show active"
-             id="home"
-             role="tabpanel"
-             aria-labelledby="home-tab">
-
-
-
-
-
-
-
-
-
-
-
-
-        </div>
-        <div class="tab-pane fade"
-             id="statistic"
-             role="tabpanel"
-             aria-labelledby="profile-tab">
-          <div class="row">
-
-
-          </div>
-
-        </div>
-
-        <div class="tab-pane fade "
-             id="recruit"
-             role="tabpanel"
-             aria-labelledby="contact-tab">
-
-          <div class="row justify-content-center ">
-
-            <div class="col-md-3 text-center banner ">
-              <span style="font-size: 55px; color:#ff6414">2</span>
-              <br><br>
-              <b style="color:rgb(241, 236, 236); font-size:3em">Amazon</b><br>
-              <img src="https://res.cloudinary.com/ctsa-capstone/image/upload/v1541237095/demo-image/companyA.png"
-                   alt="Hình công ty"
-                   height="120"
-                   width="220"
-                   class="img-recruitment">
-              <div class="info-recruitment">
-                <h3> 15 vị trí</h3>
-                <h3>Đang tuyển dụng</h3>
-              </div>
-
-            </div>
-
-            <div class="col-md-4 text-center banner"
-                 style="height:700px; width:280px;">
-              <span style="font-size: 70px; color:#ff6414">1</span><br><br>
-              <b style="color:rgb(241, 236, 236); font-size:5em">Grab</b><br>
-              <img src="https://res.cloudinary.com/ctsa-capstone/image/upload/v1541237096/demo-image/companyB.svg"
-                   alt="Hình công ty"
-                   height="140"
-                   width="240"
-                   class="img-recruitment">
-              <div class="info-recruitment">
-                <h3> 15 vị trí</h3>
-                <h3>Đang tuyển dụng</h3>
-              </div>
-
-            </div>
-
-            <div class="col-md-3 text-center banner">
-
-              <span style="font-size: 55px; color:#ff6414">3</span><br><br>
-              <b style="color:rgb(241, 236, 236); font-size:3em">RXR</b><br>
-              <img src="https://res.cloudinary.com/ctsa-capstone/image/upload/v1541237096/demo-image/companyC.png"
-                   alt="Hình công ty"
-                   height="120"
-                   width="220"
-                   class="img-recruitment">
-              <div class="info-recruitment">
-                <h3> 15 vị trí</h3>
-                <h3>Đang tuyển dụng</h3>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-  <!-- Modal -->
-  <div class="modal fade rounded"
-       id="skillModal"
-       tabindex="-1"
-       role="dialog"
-       aria-labelledby="skillModalLabel"
-       aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered modal-xm"
-         role="document">
-      <div class="modal-content">
-        <div class="pt-3 pb-2 bg-orange text-white text-center shadow "
-             style="border-top-left-radius: 20px ; 
-        border-top-right-radius: 20px !important; ">
-          <h4>Xếp hạng</h4>
-
-        </div>
-        <div class="row modal-body justify-content-between">
-          <table class="table table-bordered">
+      <div id="content" class="tab-content col-md-12 folder">
+        <div class="tab-pane fade show active" id="list-published">
+          <table class="table table-striped">
             <thead>
               <tr>
-                <th scope="col"
-                    class="text-center">#</th>
-                <th scope="col">Tên skill</th>
-
+                <th>#</th>
+                <th>Tiêu đề</th>
+                <th>Ngày đăng</th>
+                <th>Ngày hết hạn</th>
+                <th>Lượt xem</th>
+                <th></th>
               </tr>
             </thead>
-            <tbody>
-              <tr>
-                <th scope="row"
-                    class="text-center">1</th>
-                <td>Mark</td>
-
-              </tr>
-              <tr>
-                <th scope="row"
-                    class="text-center">2</th>
-                <td>Jacob</td>
-
-              </tr>
-              <tr>
-                <th scope="row"
-                    class="text-center">3</th>
-                <td>Larry the Bird</td>
-
-              </tr>
+            <tbody id="list-recruitment1">
             </tbody>
           </table>
         </div>
-        <div class="modal-footer justify-content-center">
-
-          <ul class="pagination ">
-            <li class="page-item">
-              <a class="page-link"
-                 href="#"
-                 aria-label="Previous">
-                <span aria-hidden="true">&laquo;</span>
-                <span class="sr-only">Previous</span>
-              </a>
-            </li>
-            <li class="page-item"><a class="page-link pagi-button-selected"
-                 href="#">1</a></li>
-            <li class="page-item"><a class="page-link"
-                 href="#">2</a></li>
-            <li class="page-item"><a class="page-link"
-                 href="#">3</a></li>
-            <li class="page-item">
-              <a class="page-link"
-                 href="#"
-                 aria-label="Next">
-                <span aria-hidden="true">&raquo;</span>
-                <span class="sr-only">Next</span>
-              </a>
-            </li>
-          </ul>
-
+        <div class="tab-pane fade" id="list-unpublished">
+          <table class="table table-striped">
+            <thead>
+              <tr>
+                <th>#</th>
+                <th>Tiêu đề</th>
+                <th>Ngày đăng</th>
+                <th>Ngày hết hạn</th>
+                <th></th>
+              </tr>
+            </thead>
+            <tbody id="list-recruitment0">
+            </tbody>
+          </table>
         </div>
       </div>
     </div>
   </div>
 
-
   <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.18.0/axios.min.js"></script>
+  <script src="./js/sweetalert2.all.min.js"></script>
+
   <script>
-    $("#tabhome").click(function () {
+    $("#tab-published").click(function () {
       $(this).addClass("tabactive");
-      $("#tabstat").removeClass("tabactive");
-      $("#tabrecruit").removeClass("tabactive");
+      $("#list-published").addClass("show");
+      $("#list-published").addClass("active");
+
+      $("#tab-unpublished").removeClass("tabactive");
+      $("#list-unpublished").removeClass("show");
+      $("#list-unpublished").removeClass("active");
+      $("#list-recruitment1").empty();
+
+      getRecruitmentByCompanyIdAndPublished(4, 1, 1);
     });
-    $("#tabstat").click(function () {
+
+    $("#tab-unpublished").click(function () {
       $(this).addClass("tabactive");
-      $("#tabhome").removeClass("tabactive");
-      $("#tabrecruit").removeClass("tabactive");
+      $("#list-unpublished").addClass("show");
+      $("#list-unpublished").addClass("active");
+
+      $("#tab-published").removeClass("tabactive");
+      $("#list-published").removeClass("show");
+      $("#list-published").removeClass("active");
+      $("#list-recruitment0").empty();
+
+      getRecruitmentByCompanyIdAndPublished(4, 0, 1);
     });
-    $("#tabrecruit").click(function () {
-      $(this).addClass("tabactive");
-      $("#tabhome").removeClass("tabactive");
-      $("#tabstat").removeClass("tabactive");
-    });
+
+    function getRecruitmentByCompanyIdAndPublished(companyId, published, pageNumber) {
+      var url = 'http://localhost:8080/companies/' + companyId + '/recruitment/pages/' + pageNumber;
+      if (published == 0 || published == 1) {
+        url += '?status=' + published;
+
+      }
+      axios.get(url)
+        .then(response => {
+          let list = response.data.content;
+          var total = response.data.totalPages;
+
+          var i;
+          for (i = 0; i < list.length; i++) {
+            var row = '<tr id="row' + i + '">';
+            row += '<td>' + (i + 1) + '</td>';
+            row += '<td>' + list[i].title + '</td>';
+            row += '<td>' + new Date(list[i].startDate).toLocaleDateString('vi-VN') + '</td>';
+            row += '<td>' + new Date(list[i].endDate).toLocaleDateString('vi-VN') + '</td>';
+
+            if (published == 1) {
+              row += '<td>' + list[i].viewCount + '</td>';
+              row += '<td><button class="btn btn-sm btn-secondary" onclick="publishRecruitment(' + list[i].id + ', ' + 0 + ',' + i + ')">Gỡ tin</button></td>';
+            } else {
+              row += '<td><button class="btn btn-sm bg-orange text-white" onclick="publishRecruitment(' + list[i].id + ', ' + 1 + ',' + i + ')">Đăng tin</button></td>';
+            }
+
+            row += '</tr>';
+
+            $('#list-recruitment' + published).append(row);
+          }
+        });
+    }
+
+    function publishRecruitment(recruitmentId, published, rowId) {
+      axios.put("http://localhost:8080/recruitment/" + recruitmentId + "/publish?published=" + published, {}, {
+        headers: {
+          "Content-Type": "application/x-www-form-urlencoded"
+        }
+      }).then(response => {
+        if (response.status == 200) {
+          $('#row' + rowId).remove();
+        } else {
+          errorDialog();
+        }
+      });
+    }
+
+    function successDialog() {
+      swal({
+        type: 'success',
+        title: 'Đã lưu!',
+        showConfirmButton: false,
+        timer: 2000
+      })
+    };
+
+    function errorDialog() {
+      swal({
+        type: 'error',
+        title: 'Đã có lỗi xảy ra!<br>Vui lòng thử lại sau...',
+        showConfirmButton: false,
+        timer: 2000
+      })
+    };
   </script>
 </body>
 
